--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -7,11 +7,13 @@
   align-items: center;
   left: 0px;
   top: 0;
-  background-color: cornflowerblue;
+  border-bottom: 1px solid #eaecef;
+  // background-color: cornflowerblue;
   > * {
-    margin-right: 16px;
+    margin-right: 18px;
     cursor: pointer;
-    color: blue;
+    font-weight: 600;
+    font-size: 16px;
   }
   > :last-child {
     margin-left: auto;
