--- a/src/style/global.less
+++ b/src/style/global.less
@@ -1,16 +1,20 @@
 @import './reset.css';
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 html,
 body {
   font-family: 'Courier New Regular', Courier, monospace;
   font-size: 14px;
+}
+p {
   line-height: 23px;
 }
-
 a {
-  // text-decoration: none;
+  text-decoration: none;
+  color: rgb(44, 62, 80);
 }
 .page {
   padding-top: 48px;
