--- a/src/style/home.less
+++ b/src/style/home.less
@@ -2,10 +2,12 @@
   &-wrap {
   }
   &-excerpt {
+    margin-bottom: 24px;
     &-header {
+      margin-bottom: 4px;
     }
     &-header-title {
-      font-size: 24px;
+      font-size: 16px;
       font-weight: bold;
     }
     &-header-desc {
