--- a/src/components/nav/index.less
+++ b/src/components/nav/index.less
@@ -41,7 +41,8 @@
     cursor: pointer;
     border-left: 4px solid transparent;
     &.light {
-      border-left-color: #3eaf7c;
+      color: #3eaf7c;
+      font-size: 18px;
     }
   }
   .child-list {
