--- a/src/style/global.less
+++ b/src/style/global.less
@@ -7,14 +7,17 @@
 html,
 body {
   font-family: 'Courier New Regular', Courier, monospace;
-  font-size: 14px;
+  font-size: 16px;
 }
 p {
-  line-height: 23px;
+  line-height: 1.5;
 }
 a {
   text-decoration: none;
   color: rgb(44, 62, 80);
+  &:hover {
+    text-decoration: underline;
+  }
 }
 .page {
   padding-top: 48px;
