--- a/src/style/global.less
+++ b/src/style/global.less
@@ -1,8 +1,11 @@
 @import './reset.css';
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
+  outline: 0;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 html,
 body {
