--- a/src/components/header/index.less
+++ b/src/components/header/index.less
@@ -8,7 +8,8 @@
   left: 0px;
   top: 0;
   border-bottom: 1px solid #eaecef;
-  // background-color: cornflowerblue;
+  background-color: #fff;
+  z-index: 1000;
   > * {
     margin-right: 18px;
     cursor: pointer;
