--- a/src/style/home.less
+++ b/src/style/home.less
@@ -2,12 +2,16 @@
   &-wrap {
   }
   &-excerpt {
-    margin-bottom: 24px;
+    margin: 0 16px 24px 0;
+    padding: 16px;
+    border: 1px solid transparent;
+    border-radius: 6px;
+    background-color: #99CCCC;
     &-header {
       margin-bottom: 4px;
     }
     &-header-title {
-      font-size: 16px;
+      font-size: 18px;
       font-weight: bold;
     }
     &-header-desc {
@@ -16,7 +20,7 @@
       font-size: 14px;
     }
     &-text {
-      font-size: 14px;
+      font-size: 16px;
     }
   }
 }
