添加文章导航

--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -1,12 +1,15 @@
 .c-layout {
   &-sidebar-content {
     position: relative;
+    display: flex;
     .c-nav {
-      width: 25%;
+      margin-right: 40px;
       max-width: 300px;
-      position: fixed;
-      left: 0;
-      top: 48px;
+      flex: 1 0 auto;
+      // width: 25%;
+      // position: fixed;
+      // left: 0;
+      // top: 48px;
     }
   }
   &-content {
