--- a/src/components/nav/index.less
+++ b/src/components/nav/index.less
@@ -1,9 +1,10 @@
 .c-nav {
-  // outline: 1px solid blue;
+  max-width: 300px;
   min-height: calc(100vh - 48px);
   padding: 16px 16px 16px 0;
-  border-right: 2px solid #eaecef;
   overflow: auto;
+  position: sticky;
+  top: 48px;
   .file-item {
     display: block;
     margin: 8px 0;
