--- a/src/style/home.less
+++ b/src/style/home.less
@@ -2,7 +2,7 @@
   &-wrap {
   }
   &-excerpt {
-    margin: 0 16px 24px 0;
+    margin-bottom: 24px;
     padding: 16px;
     border: 1px solid transparent;
     border-radius: 6px;
