--- a/src/templates/article.less
+++ b/src/templates/article.less
@@ -1,9 +1,12 @@
 .page-article-template {
+  .article-title-wrap {
+    border-left: 2px solid #eaecef;
+  }
   .article-title-list {
     padding: 16px;
-    border-left: 2px solid #eaecef;
     min-width: 10%;
-    // flex: 0 1 auto;
+    position: sticky;
+    top: 48px;
     li {
       margin-bottom: 12px;
       list-style: none;
@@ -17,7 +20,7 @@
 }
 
 .article-wrap {
-  padding-right: 32px;
+  padding: 0 32px 0 64px;
   h1 {
     font-size: 16px;
   }
