--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -2,17 +2,9 @@
   &-sidebar-content {
     position: relative;
     display: flex;
-    .c-nav {
-      margin-right: 40px;
-      max-width: 300px;
-      flex: 1 0 auto;
-      // width: 25%;
-      // position: fixed;
-      // left: 0;
-      // top: 48px;
-    }
   }
-  &-content {
-    margin-left: calc(25% + 32px);
+  &-nav {
+    flex: 1 0 auto;
+    border-right: 2px solid #eaecef;
   }
 }
