--- a/src/components/layout/index.less
+++ b/src/components/layout/index.less
@@ -2,9 +2,12 @@
   &-sidebar-content {
     position: relative;
     display: flex;
+    .article-wrap {
+      flex: 1 1 auto;
+    }
   }
   &-nav {
-    flex: 1 0 auto;
+    // flex: 1 0 auto;
     border-right: 2px solid #eaecef;
   }
 }
