--- a/src/templates/article.less
+++ b/src/templates/article.less
@@ -66,6 +66,7 @@
     padding-left: 1.5em;
     color: #57606a;
     border-left: 0.25em solid #d0d7de;
+    background-color: #E0FFD4; // #E0FFD4 #F3FEE0
   }
   code {
     // color: #d63200;
@@ -76,7 +77,23 @@
     color: #5b5b66;
     background-color: #f0f0f4;
   }
-  .gatsby-resp-image-wrapper {
-    margin-left: 0 !important;
+  img {
+    box-shadow: 0 0 80px -30px rgba(0, 0, 0, 0.5) !important;
   }
+  table {
+    border-collapse: collapse;
+    border-spacing: 0;
+    th,
+    td {
+      color: #fff;
+      text-align: left;
+      padding: 8px 16px;
+      background-color: #1f2329;
+      border-right: 1px solid rgba(220, 223, 230, 0.3);
+      border-bottom: 1px solid rgba(220, 223, 230, 0.3);
+    }
+  }
+  // .gatsby-resp-image-wrapper {
+  //   margin-left: 0 !important;
+  // }
 }
