--- a/src/templates/article.less
+++ b/src/templates/article.less
@@ -54,7 +54,7 @@
     }
   }
   ol {
-    margin-left: 12px;
+    margin-left: 3px;
     li {
       // list-style-position: inside;
       > :first-child {
@@ -63,19 +63,23 @@
     }
   }
   blockquote {
-    padding-left: 1.5em;
+    padding-left: 24px;
     color: #57606a;
-    border-left: 0.25em solid #d0d7de;
-    background-color: #E0FFD4; // #E0FFD4 #F3FEE0
+    border-left: 0.25em solid rgb(255, 177, 27);
+    background-color: rgb(255, 245, 227);
+    > p {
+      margin-left: -16px;
+    }
   }
   code {
-    // color: #d63200;
     padding: 3px 5px;
     margin: 0 2px;
     border-radius: 2px;
     white-space: nowrap;
-    color: #5b5b66;
-    background-color: #f0f0f4;
+    color: rgb(155, 110, 35);
+    background-color: rgb(255, 245, 227);
+    // color: #5b5b66;
+    // background-color: #f0f0f4;
   }
   img {
     box-shadow: 0 0 80px -30px rgba(0, 0, 0, 0.5) !important;
