解析svg, 文章标题索引编号

--- a/src/templates/article.less
+++ b/src/templates/article.less
@@ -2,12 +2,19 @@
   .article-title-wrap {
     min-width: 10%;
     border-left: 2px solid #eaecef;
+    .item {
+      font-size: 14px;
+      font-weight: 500;
+      a {
+        pointer-events: none;
+      }
+    }
   }
   .article-title-list {
-    padding: 16px;
+    padding: 8px;
     position: sticky;
     top: 48px;
-    li {
+    .item {
       margin-bottom: 12px;
       list-style: none;
       cursor: pointer;
@@ -20,9 +27,9 @@
 }
 
 .article-wrap {
-  padding: 0 32px 0 24px;
+  padding: 0 8px 0 24px;
   h1 {
-    margin: 36px;
+    margin: 36px 0;
     font-size: 16px;
     border-bottom: 2px solid blue;
   }
@@ -96,8 +103,8 @@
 }
 
 /* 自动计算标题编号 */
-/** initialize css counter */
-.article-wrap {
+.article-wrap,
+.article-title-wrap {
   counter-reset: h1;
   h1 {
     counter-reset: h2;
